# FlaxDiff

./: .env  .gitignore  .gitmodules  README.md  dataset_preprocessing.ipynb  demo_hilbert_curve.py  differential equation tests.ipynb  evaluate.ipynb  inference_prototype.ipynb  pmap experiments.ipynb  prototype_general_pipeline.ipynb  prototype_pipeline.ipynb  prototyping.ipynb  pyproject.toml  setup.py  setup_tpu.sh  test modeling.ipynb  test.json  test_unet3d.py  tpu training debugging.ipynb  training.py  training_tpu.py  utils.py  video_diffusion_example.ipynb
.github/workflows/: python-app.yml  python-publish.yml
datasets/: cc12m downloader.sh  convert_to_arrayrecord.py  custom datasets downloader.sh  data pipeline experiments.ipynb  data-processing.py  dataset preparations copy.ipynb  dataset preparations.ipynb  gcsfuse.sh  laion_a+coco17.sh
datasets/preprocess/: README.md  debug.ipynb
example notebooks/: ddpm + ddim flax.ipynb  ddpm flax.ipynb  simple diffusion flax.ipynb
flaxdiff/: utils.py
flaxdiff/data/: __init__.py  benchmark_decord.py  dataloaders.py  dataset_map.py  datasets.py  debug.ipynb  online_loader.py
metrics/: utils.py
models/: __init__.py  simple_unet.py
predictors/: __init__.py
samplers/: common.py  ddim.py  ddpm.py  euler_discrete.py  prediction_transforms.py  rk4_sampler.py
schedulers/: __init__.py  common.py  cosine.py  discrete.py  exp.py  karras.py  linear.py
tpu_utils/: README.md  ray_tpu_controller.py  setup_tpu.sh  tpu_api.py  tpu_controller.py
trainer/: __init__.py
tutorial notebooks/: edm tutorial.ipynb
(+86 files in other folders)
